--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "remix-jokes",
-  "description": "This is a Remix tutorial app with Supabase and Cloudflare Workers. ",
+  "description": "This is a Remix tutorial app with Supabase and Cloudflare Workers.",
   "license": "MIT",
   "scripts": {
     "build": "remix build",
@@ -16,7 +16,7 @@
     "@remix-run/cloudflare-workers": "^1.1.3",
     "@remix-run/react": "^1.1.3",
     "@supabase/supabase-js": "^1.30.0",
-    "dotenv": "^16.0.0",
+    "dotenv": "16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.3"
